--- a/login.html
+++ b/login.html
@@ -39,7 +39,9 @@
           </div>
           <div>
             <button type="submit" class="signup-btn">Login</button>
-            <button type="submit" class="return-btn"><a href="./index.html">Return to Homepage</a></button>
+            <button type="submit" class="return-btn">
+              <a href="./index.html">Return to Homepage</a>
+            </button>
           </div>
         </form>
       </div>
