--- a/register.html
+++ b/register.html
@@ -62,7 +62,9 @@
           </div>
           <div>
             <button type="submit" class="signup-btn">Sign Up</button>
-            <button type="submit" class="return-btn"><a href="./index.html">Return to Homepage</a></button>
+            <button type="submit" class="return-btn">
+              <a href="./index.html">Return to Homepage</a>
+            </button>
           </div>
         </form>
       </div>
